
syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "Store";
option optimize_for = SPEED;

package com.github.diegogomesaraujo.store.grpc;

enum PaymentType {
	CREDIT = 0;
	DEBIT = 1;
}

message Payment {
	PaymentType type = 1;
	string number = 2;
	string expirationDate = 3;
	string verificationCode = 4;
}

message ProductRPC {
    string id = 1;
    string name = 2;
    string description = 3;
    string price = 4;
}

message PaymentRequest {
	Payment payment = 2;
	repeated ProductRPC products = 3;
}

message PaginationRequest {
    int32 page = 1;
    int32 size = 2;
}

message ProductResponse {
    repeated ProductRPC products = 1;
}

message MessageResponse {
    string message = 1;
}

service ShoppingService {
    rpc ListProducts(PaginationRequest) returns (ProductResponse) {}
    rpc Checkout(PaymentRequest) returns (MessageResponse) {}
}

service StoreService {
	rpc CreateProduct(ProductRPC) returns (MessageResponse) {}
	rpc UpdateProduct(ProductRPC) returns (MessageResponse) {}
	rpc DeleteProduct(ProductRPC) returns (MessageResponse) {}
}